<?xml version="1.0"?>
<package format="2">
  <name>cube_localization</name>
  <version>0.0.0</version>
  <description>The cube_localization package</description>
  <maintainer email="dongfang@todo.todo">dongfang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf_conversions</build_depend>
  <export>

  </export>
</package>
