<?xml version="1.0"?>
<package format="2">
  <name>humanoid_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  
  <maintainer email="chendongfang.cd@hotmail.com">box</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package dependencies -->
  <depend>roscpp</depend>
  <depend>humanoid_msgs</depend>
  <depend>tf</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>

  <!-- Export the build type -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
